# getting_started_with_claude_agent_sdk

./: .env.example  .gitignore  README.md  pyproject.toml
code/: run_agent.py
code/exercises/module_1/: README.md  pyproject.toml
code/exercises/module_1/stock_analyzer/: .gitignore  01_stock_analyzer.ipynb  README.md  pyproject.toml
code/exercises/module_2/stock_analyzer_with_skills/: .env.example  .gitignore  COST_TRACKING.md  DEBUG_MODE_EXAMPLES.md  QUICKSTART.md  README.md  pyproject.toml  stock_analyzer.py
code/exercises/module_2/stock_analyzer_with_skills/.claude/skills/risk-analysis/: SKILL.md  analyze_risk.py
code/exercises/module_3/investment_research_system/: .env.example  .gitignore  README.md  investment_research.py  logger.py  pyproject.toml
code/exercises/module_3/investment_research_system/.claude/skills/comparative-analysis/: SKILL.md
code/exercises/module_3/investment_research_system/.claude/skills/competitive-positioning/: SKILL.md  benchmark.py
code/exercises/module_3/investment_research_system/.claude/skills/dashboard-design/: SKILL.md
code/exercises/module_3/investment_research_system/.claude/skills/financial-analysis/: SKILL.md  compute_metrics.py
code/exercises/module_3/investment_research_system/.claude/skills/news-sentiment/: SKILL.md  analyze_sentiment.py
code/exercises/module_3/investment_research_system/.claude/skills/report-builder/: SKILL.md  build_report.py
code/exercises/module_3/investment_research_system/.claude/skills/stock-lookup/: SKILL.md  fetch_stock.py
code/exercises/module_3/investment_research_system/custom_tools/: competitive_tools.py  financial_tools.py  sentiment_tools.py  visualization_tools.py
sample_project/: README.md  pyproject.toml  storage.py  task_manager.py  utils.py
(+28 files in other folders)
